<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Moody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email"> Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="no_account">You Do’t have an account?</string>
    <string name="create_account">create an account</string>
    <string name="register_email"> Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_button">Sign Up</string>
    <string name="go_back">Go Back</string>
    <string name="song_name">name of song</string>
    <string name="song_description">song description</string>
    <string name="_0_00">0:00</string>
    <string name="_1_00">-0:00</string>
    <string name="playbutton">ToggleButton</string>
    <string name="off"> press to edit</string>
    <string name="on" >Edit</string>
    <string name="optionbutton">ToggleButton</string>
    <string name="nofavorite" />
    <string name="isfavorite" />
    <string name="who_your_mood_now">Who Your Mood now</string>
    <string name="favorite">favorite</string>
    <string name="share">Share …</string>
    <string name="favorite_recyclerview">Add to Favorite</string>
    <string name="songName">TextView</string>
    <string name="songDes">TextView</string>
    <string name="delete_favorite">remove from favorite …</string>
    <string name="search">search_item</string>
    <string name="logout">logout</string>
    <string name="rename_music">Rename Music</string>
    <string name="name">Name</string>
    <string name="name_plain_text" />
    <string name="descripition">Description</string>
    <string name="description_plain_text" />
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="rename">Rename</string>
    <string name="download" tools:ignore="ExtraTranslation">download</string>
    <string name="firstName">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="edit_button">save changes</string>
    <string name="edit">edit</string>
    <string name="profile">your profile</string>

</resources>