<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#313131"
    tools:context=".view.identity.ProfileActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="85dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:src="@drawable/person" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/profile_first_name_edittext"
            android:layout_width="316dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white66" />

        <EditText
            android:id="@+id/profile_last_name_edittext"
            android:layout_width="316dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white66" />

        <EditText
            android:id="@+id/profile_email_edittext"
            android:layout_width="316dp"
            android:layout_height="50dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white66"
            android:textColorHint="@color/white66" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatToggleButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/outbuttonstyle"
                android:backgroundTint="@color/red"
                android:text="@string/edit_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textOff="@string/off"
                android:textOn="@string/on"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>
</FrameLayout>